apply plugin: 'com.android.application'
apply plugin: 'com.jakewharton.butterknife'

android {
    compileSdk 33
    defaultConfig {
        applicationId "com.project.sakura"
        minSdkVersion 21
        targetSdkVersion 33
        versionCode 68
        versionName "2.6.3"
        ndk { abiFilters "armeabi-v7a", "arm64-v8a", "x86_64" }
        resConfigs "zh"
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    buildTypes {
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    packagingOptions {
        exclude 'META-INF/LICENSE.txt'
        exclude 'META-INF/beans.xml'
    }
}

allprojects {
    repositories {
        maven { url "https://jitpack.io" }
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation "androidx.core:core-splashscreen:1.0.0-alpha02"
    implementation 'androidx.compose.material3:material3:1.0.0-alpha15'
    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
    implementation 'androidx.navigation:navigation-fragment:2.3.0'
    implementation 'androidx.navigation:navigation-ui:2.3.0'
    implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.9.9'
    implementation 'androidx.appcompat:appcompat:1.2.0'
    implementation 'androidx.palette:palette:1.0.0'
    implementation 'com.google.android.material:material:1.5.0-beta01'
    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
    implementation 'androidx.cardview:cardview:1.0.0'
//    implementation 'androidx.navigation:navigation-fragment:2.3.0'
//    implementation 'androidx.navigation:navigation-ui:2.3.0'
    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
//    implementation 'pub.devrel:easypermissions:3.0.0'
    implementation 'com.guolindev.permissionx:permissionx:1.7.1'
//    implementation 'com.r0adkll:slidableactivity:2.0.5'
    implementation 'com.jakewharton:butterknife:10.2.1'
    implementation 'org.jetbrains:annotations:15.0'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
    implementation 'cn.jzvd:jiaozivideoplayer:7.2.0'
    implementation 'com.google.android.exoplayer:exoplayer:2.12.1'
    implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
//    implementation 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.4'
    api 'com.github.CarGuo.GSYVideoPlayer:gsyVideoPlayer-arm64:v8.1.9-release-jitpack'
    api 'com.github.CarGuo.GSYVideoPlayer:gsyVideoPlayer-armv7a:v8.1.9-release-jitpack'
    api 'com.github.CarGuo.GSYVideoPlayer:gsyVideoPlayer-armv5:v8.1.9-release-jitpack'
    api 'com.github.CarGuo.GSYVideoPlayer:gsyVideoPlayer-x86:v8.1.9-release-jitpack'
    api 'com.github.CarGuo.GSYVideoPlayer:gsyVideoPlayer-x64:v8.1.9-release-jitpack'
    implementation 'com.github.bumptech.glide:glide:4.11.0'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
    implementation 'jp.wasabeef:glide-transformations:4.3.0'
    implementation "androidx.browser:browser:1.3.0"
//    implementation 'com.github.fanchen001:Sniffing:1.0.1'
//    implementation 'com.github.GrenderG:Toasty:1.4.2'
//    implementation 'co.lujun:androidtagview:1.1.7'
    // Jetty library
    implementation 'org.eclipse.jetty:jetty-server:8.1.22.v20160922'
    implementation 'org.eclipse.jetty:jetty-servlet:8.1.22.v20160922'
    implementation 'org.eclipse.jetty:jetty-client:8.1.22.v20160922'
    implementation 'com.wuyr:rippleanimation:1.0.0'
    implementation 'com.github.MZCretin:ExpandableTextView:v1.6.1-x'
    implementation 'com.alibaba:fastjson:1.1.72.android'
    implementation 'org.greenrobot:eventbus:3.2.0'
    // Aria
    implementation 'me.laoyuyu.aria:core:3.8.16'
    annotationProcessor 'me.laoyuyu.aria:compiler:3.8.16'
    implementation 'me.laoyuyu.aria:m3u8:3.8.16'
    // danmu
    implementation 'com.github.ctiao:DanmakuFlameMaster:0.9.25'
    implementation 'com.github.ctiao:ndkbitmap-armv7a:0.9.21'
    implementation 'org.jsoup:jsoup:1.14.1'
    implementation 'io.github.youth5201314:banner:2.2.2'
}

